--- a/english-for-kids/assets/styles/abstracts/_variables.scss
+++ b/english-for-kids/assets/styles/abstracts/_variables.scss
@@ -3,3 +3,5 @@
 $color-black: #000;
 $color-white: #fff;
 $color-grey: rgb(123, 123, 123);
+$color-dark-green: rgba(87, 154, 87, 1);
+$color-light-green: rgba(87, 154, 87, .3);
