--- a/english-for-kids/assets/styles/components/_switch.scss
+++ b/english-for-kids/assets/styles/components/_switch.scss
@@ -1,7 +1,47 @@
 .switch{
     grid-column: 6/7;
-    width: 70px;
-    height: 30px;
-    background-color: green;
+    width: 110px;
+    height: 45px;
+    background-color: $color-light-green;
     margin-top: 30px;
+    position: relative;
+    border-radius: 20px;
+
+    &__label{
+        width: 100%;
+        height: 100%;
+        display: inline-block;
+        z-index: 100;
+        cursor: pointer;
+    }
+
+    &__slider{
+        display: inline-block;
+        width: 35px;
+        height: 35px;
+        background-color: $color-dark-green;
+        position: absolute;
+        top: 5px;
+        left: 7px;
+        border-radius: 20px;
+        cursor: pointer;
+        transition: all .3s;
+        z-index: 10;
+    }
+
+    &__header{
+        position: absolute;
+        top: 8px;
+        left: -70px;
+        font-size: 2.2rem;
+    }
+}
+
+
+#switch-checkbox{
+    display: none;
+}
+
+#switch-checkbox:checked + .switch__slider{
+    transform: translateX(62px);
 }
