--- a/english-for-kids/assets/styles/style.css
+++ b/english-for-kids/assets/styles/style.css
@@ -32,11 +32,13 @@ body {
 .navbar {
   width: 380px;
   height: 100vh;
-  background-color: rgba(87, 154, 87, 0.6);
+  background: linear-gradient(rgba(87, 154, 87, 0.3), #579a57);
   position: fixed;
   top: 0;
   left: 0;
   padding: 130px 50px;
+  opacity: 0;
+  transition: all 0.3s;
 }
 .navbar__list {
   width: 70%;
@@ -55,10 +57,46 @@ body {
 
 .switch {
   grid-column: 6/7;
-  width: 70px;
-  height: 30px;
-  background-color: green;
+  width: 110px;
+  height: 45px;
+  background-color: rgba(87, 154, 87, 0.3);
   margin-top: 30px;
+  position: relative;
+  border-radius: 20px;
+}
+.switch__label {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  z-index: 100;
+  cursor: pointer;
+}
+.switch__slider {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  background-color: #579a57;
+  position: absolute;
+  top: 5px;
+  left: 7px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: all 0.3s;
+  z-index: 10;
+}
+.switch__header {
+  position: absolute;
+  top: 8px;
+  left: -70px;
+  font-size: 2.2rem;
+}
+
+#switch-checkbox {
+  display: none;
+}
+
+#switch-checkbox:checked + .switch__slider {
+  transform: translateX(62px);
 }
 
 .hamburger {
@@ -103,6 +141,10 @@ body {
   height: 5px;
   background-color: #7b7b7b;
   border-radius: 10px;
+}
+
+.hamburger__checkbox:checked ~ .navbar {
+  opacity: 1;
 }
 
 /*# sourceMappingURL=style.css.map */
