feat: add cards for 8 categories and styles

--- a/english-for-kids/assets/styles/abstracts/_variables.scss
+++ b/english-for-kids/assets/styles/abstracts/_variables.scss
@@ -5,3 +5,4 @@ $color-white: #fff;
 $color-grey: rgb(123, 123, 123);
 $color-dark-green: rgba(87, 154, 87, 1);
 $color-light-green: rgba(87, 154, 87, .3);
+$color-darkest-green: rgb(6, 41, 6)
