--- a/english-for-kids/assets/styles/layout/_navigation.scss
+++ b/english-for-kids/assets/styles/layout/_navigation.scss
@@ -2,13 +2,13 @@
 
     width: 380px;
     height: 100vh;
-    background: linear-gradient($color-light-green, $color-dark-green);
+    background-color: $color-dark-green;
     position: fixed;
     top: 0;
     left: 0;
     padding: 130px 50px;
-    opacity: 0;
     transition: all .3s;
+    display: none;
 
 
 
