--- a/english-for-kids/assets/styles/style.css
+++ b/english-for-kids/assets/styles/style.css
@@ -27,18 +27,27 @@ body {
   display: grid;
   justify-items: center;
   grid-template-columns: repeat(6, 1fr);
+  width: 100%;
+}
+
+.main {
+  width: 100%;
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 30px;
 }
 
 .navbar {
   width: 380px;
   height: 100vh;
-  background: linear-gradient(rgba(87, 154, 87, 0.3), #579a57);
+  background-color: #579a57;
   position: fixed;
   top: 0;
   left: 0;
   padding: 130px 50px;
-  opacity: 0;
   transition: all 0.3s;
+  display: none;
 }
 .navbar__list {
   width: 70%;
@@ -53,6 +62,39 @@ body {
   text-decoration: none;
   color: #fff;
   cursor: pointer;
+}
+
+.card-main {
+  width: 280px;
+  height: 260px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px 0 #000;
+  display: flex;
+  flex-direction: column;
+  font-size: 24px;
+  line-height: 36px;
+  font-weight: 400;
+  text-align: center;
+  text-decoration: none;
+  background: linear-gradient(rgba(87, 154, 87, 0.3), #579a57);
+  color: #fff;
+  transition: all 0.3s;
+}
+.card-main__img {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  border: 10px solid #fff;
+  object-fit: cover;
+  margin: 30px auto;
+}
+
+.card-main:hover {
+  box-shadow: 0 0 20px 0 #000;
+}
+
+.card-main:active {
+  box-shadow: 0 0 14px 0 #000;
 }
 
 .switch {
@@ -125,12 +167,12 @@ body {
 .hamburger__label {
   width: 100%;
   height: 100%;
-  z-index: 1000;
   display: inline-block;
   position: absolute;
   top: 2px;
   left: 0;
   cursor: pointer;
+  z-index: 100;
 }
 .hamburger__checkbox {
   display: none;
@@ -141,10 +183,11 @@ body {
   height: 5px;
   background-color: #7b7b7b;
   border-radius: 10px;
+  z-index: 200;
 }
 
 .hamburger__checkbox:checked ~ .navbar {
-  opacity: 1;
+  display: block;
 }
 
 /*# sourceMappingURL=style.css.map */
