--- a/english-for-kids/assets/styles/style.css
+++ b/english-for-kids/assets/styles/style.css
@@ -64,6 +64,64 @@ body {
   cursor: pointer;
 }
 
+.card {
+  width: 280px;
+  height: 260px;
+  border-radius: 5px;
+  font-size: 24px;
+  line-height: 36px;
+  font-weight: 400;
+  text-align: center;
+  color: #fff;
+  position: relative;
+  perspective: 150rem;
+}
+.card__front {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  backface-visibility: hidden;
+  transition: all 0.6s;
+  box-shadow: 0 0 10px 0 #000;
+  text-align: center;
+  color: #000;
+}
+.card__front__img {
+  max-width: 100%;
+}
+.card__front__title {
+  font-size: 3rem;
+}
+.card__back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  backface-visibility: hidden;
+  transition: all 0.6s;
+  transform: rotateY(-180deg);
+  box-shadow: 0 0 10px 0 #000;
+  text-align: center;
+  color: #000;
+}
+.card__back__img {
+  max-width: 100%;
+}
+.card__back__title {
+  font-size: 3rem;
+}
+
+.card:hover .card__front {
+  transform: rotateY(-180deg);
+}
+
+.card:hover .card__back {
+  transform: rotateY(0);
+}
+
 .card-main {
   width: 280px;
   height: 260px;
