--- a/english-for-kids/assets/styles/components/_card.scss
+++ b/english-for-kids/assets/styles/components/_card.scss
@@ -22,6 +22,7 @@
         box-shadow: 0 0 10px 0 $color-black;
         text-align: center;
         color: $color-black;
+        position: relative;
 
         &__img{   
             max-width: 100%;
@@ -29,6 +30,14 @@
 
         &__title{
             font-size: 3rem;
+        }
+
+        &__arrows{
+            width: 23px;
+            height: 23px;
+            position: absolute;
+            right: 30px;
+            bottom: 30px;
         }
     }
 
@@ -55,10 +64,10 @@
     }
 }
 
-.card:hover .card__front{
-    transform: rotateY(-180deg);
-}
+// .card:hover .card__front{
+//     transform: rotateY(-180deg);
+// }
 
-.card:hover .card__back{
-    transform: rotateY(0);
-}
+// .card:hover .card__back{
+//     transform: rotateY(0);
+// }
