--- a/english-for-kids/assets/styles/components/_hamburger.scss
+++ b/english-for-kids/assets/styles/components/_hamburger.scss
@@ -5,37 +5,18 @@
     margin-top: 30px;
     position: relative;
 
-    &::before{
-        content: '';
-        display: inline-block;
-        width: 100%;
-        height: 5px;
-        background-color: $color-grey;
-        border-radius: 10px;
-    }
-
-    &::after{
-        content: '';
-        display: inline-block;
-        width: 100%;
-        height: 5px;
-        background-color: $color-grey;
-        border-radius: 10px;
-    }
-
-    &__label{
+    
+    &__checkbox{
+        display: none;
         width: 100%;
         height: 100%;
         display: inline-block;
         position: absolute;
         top: 2px;
         left: 0;
-        cursor: pointer;    
-        z-index: 200; 
-    }
-    
-    &__checkbox{
-        display: none;
+        cursor: pointer;  
+        z-index: 10;
+        opacity: 0;
     }
 
     &__line{
@@ -44,10 +25,15 @@
         height: 5px;
         background-color: $color-grey;
         border-radius: 10px;
-        z-index: 200;
+        z-index: 8;
+        position: relative;
     }
 }
 
 .hamburger__checkbox:checked ~ .navbar{
-    display: block;
+    transform: translateX(0px);
+}
+
+.hamburger__checkbox:checked ~ span{
+    margin-top: 2px;
 }
