--- a/english-for-kids/assets/styles/style.css
+++ b/english-for-kids/assets/styles/style.css
@@ -46,9 +46,10 @@ body {
   top: 0;
   left: 0;
   padding: 130px 50px;
-  transition: all 0.3s;
-  display: none;
-  z-index: 100;
+  transition: all 0.6s;
+  display: block;
+  transform: translateX(-400px);
+  z-index: 1;
 }
 .navbar__list {
   width: 70%;
@@ -211,23 +212,8 @@ body {
   margin-top: 30px;
   position: relative;
 }
-.hamburger::before {
-  content: "";
-  display: inline-block;
-  width: 100%;
-  height: 5px;
-  background-color: #7b7b7b;
-  border-radius: 10px;
-}
-.hamburger::after {
-  content: "";
-  display: inline-block;
-  width: 100%;
-  height: 5px;
-  background-color: #7b7b7b;
-  border-radius: 10px;
-}
-.hamburger__label {
+.hamburger__checkbox {
+  display: none;
   width: 100%;
   height: 100%;
   display: inline-block;
@@ -235,10 +221,8 @@ body {
   top: 2px;
   left: 0;
   cursor: pointer;
-  z-index: 200;
-}
-.hamburger__checkbox {
-  display: none;
+  z-index: 10;
+  opacity: 0;
 }
 .hamburger__line {
   display: inline-block;
@@ -246,11 +230,16 @@ body {
   height: 5px;
   background-color: #7b7b7b;
   border-radius: 10px;
-  z-index: 200;
+  z-index: 8;
+  position: relative;
 }
 
 .hamburger__checkbox:checked ~ .navbar {
-  display: block;
+  transform: translateX(0px);
+}
+
+.hamburger__checkbox:checked ~ span {
+  margin-top: 2px;
 }
 
 /*# sourceMappingURL=style.css.map */
