--- a/english-for-kids/assets/styles/abstracts/_variables.scss
+++ b/english-for-kids/assets/styles/abstracts/_variables.scss
@@ -1,8 +1,16 @@
-//COLORS
+//Colors
 
 $color-black: #000;
 $color-white: #fff;
 $color-grey: rgb(123, 123, 123);
 $color-dark-green: rgba(87, 154, 87, 1);
 $color-light-green: rgba(87, 154, 87, .3);
-$color-darkest-green: rgb(6, 41, 6)
+$color-darkest-green: rgb(6, 41, 6);
+
+
+//Media
+
+$screen-1200: 1200px;
+$screen-900: 900px;
+$screen-630: 630px;
+$screen-320: 320px;
