feat: transform data object with categories and cards

--- a/english-for-kids/assets/styles/base/_base.scss
+++ b/english-for-kids/assets/styles/base/_base.scss
@@ -15,11 +15,12 @@ html {
 }
 
 body{
-    overflow: hidden;
+    overflow: auto;
     color: $color-black;
 }
 
 .wrapper{
     max-width: 1300px;
     margin: 0 auto;
+    padding: 5px;
 }
