feat: add event to layout handler for changing side of cards

--- a/english-for-kids/assets/styles/components/_card.scss
+++ b/english-for-kids/assets/styles/components/_card.scss
@@ -64,10 +64,16 @@
     }
 }
 
-.card:hover .card__front{
+// .card:hover .card__front{
+//     transform: rotateY(-180deg);
+// }
+
+// .card:hover .card__back{
+//     transform: rotateY(0);
+// }
+.rotateBack{
     transform: rotateY(-180deg);
 }
-
-.card:hover .card__back{
+.rotateFront{
     transform: rotateY(0);
 }
