--- a/english-for-kids/assets/styles/style.css
+++ b/english-for-kids/assets/styles/style.css
@@ -91,6 +91,34 @@ body {
   text-decoration: underline;
 }
 
+.button-start {
+  display: none;
+  box-sizing: border-box;
+  padding: 20px 25px;
+  font-size: 24px;
+  margin: 15px auto;
+  max-width: 450px;
+  height: 65px;
+  color: #fff;
+  border-radius: 10px;
+  border: 0;
+  outline: 0 !important;
+  border-width: 1px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  background-color: #579a57;
+  cursor: pointer;
+  box-shadow: 0 2px 5px #7b7b7b;
+}
+
+.button-start:hover {
+  box-shadow: 0 7px 12px #7b7b7b;
+}
+
+.button-start:active {
+  box-shadow: 0 3px 7px #7b7b7b;
+}
+
 .card {
   width: 280px;
   height: 260px;
