feat: add function for changing styles of layout when play/train mode

--- a/english-for-kids/assets/styles/abstracts/_variables.scss
+++ b/english-for-kids/assets/styles/abstracts/_variables.scss
@@ -6,6 +6,8 @@ $color-grey: rgb(123, 123, 123);
 $color-dark-green: rgba(87, 154, 87, 1);
 $color-light-green: rgba(87, 154, 87, .3);
 $color-darkest-green: rgb(6, 41, 6);
+$color-light-pink: rgba(235, 163, 227, .3);
+$color-dark-pink: rgb(235, 163, 227);
 
 
 //Media
