--- a/english-for-kids/assets/styles/components/_button.scss
+++ b/english-for-kids/assets/styles/components/_button.scss
@@ -13,7 +13,7 @@
     border-width: 1px;
     -webkit-transition: .3s;
     transition: .3s;
-    background-color: $color-dark-green;
+    background-color: rgb(235, 163, 227);
     cursor: pointer;
     box-shadow: 0 2px 5px $color-grey;
 }
