--- a/english-for-kids/assets/styles/components/_switch.scss
+++ b/english-for-kids/assets/styles/components/_switch.scss
@@ -8,14 +8,6 @@
     border-radius: 20px;
 
     &__label{
-        width: 100%;
-        height: 100%;
-        display: inline-block;
-        z-index: 100;
-        cursor: pointer;
-    }
-
-    &__slider{
         display: inline-block;
         width: 35px;
         height: 35px;
@@ -42,6 +34,6 @@
     display: none;
 }
 
-#switch-checkbox:checked + .switch__slider{
+#switch-checkbox:checked ~ .switch__label{
     transform: translateX(62px);
 }
