--- a/english-for-kids/assets/styles/style.css
+++ b/english-for-kids/assets/styles/style.css
@@ -106,7 +106,7 @@ body {
   border-width: 1px;
   -webkit-transition: 0.3s;
   transition: 0.3s;
-  background-color: #579a57;
+  background-color: #eba3e3;
   cursor: pointer;
   box-shadow: 0 2px 5px #7b7b7b;
 }
@@ -229,13 +229,6 @@ body {
   border-radius: 20px;
 }
 .switch__label {
-  width: 100%;
-  height: 100%;
-  display: inline-block;
-  z-index: 100;
-  cursor: pointer;
-}
-.switch__slider {
   display: inline-block;
   width: 35px;
   height: 35px;
@@ -259,7 +252,7 @@ body {
   display: none;
 }
 
-#switch-checkbox:checked + .switch__slider {
+#switch-checkbox:checked ~ .switch__label {
   transform: translateX(62px);
 }
 
