feat: add 2 modules and add necessary function inside, started to write play mode functions

--- a/english-for-kids/assets/styles/main.scss
+++ b/english-for-kids/assets/styles/main.scss
@@ -27,6 +27,7 @@
 // 5. Components
 @import
   'components/button',
+  'components/rating',
   'components/card',
   'components/card-main',
   'components/switch',
