--- a/english-for-kids/assets/styles/style.css
+++ b/english-for-kids/assets/styles/style.css
@@ -119,6 +119,20 @@ body {
   box-shadow: 0 3px 7px #7b7b7b;
 }
 
+.rating {
+  width: 420px;
+  height: 50px;
+  grid-column: 3/5;
+  margin-top: 30px;
+}
+
+.star {
+  width: 40px;
+  min-width: 40px;
+  height: 40px;
+  background-size: 40px 40px;
+}
+
 .card {
   width: 280px;
   height: 260px;
