--- a/english-for-kids/assets/styles/components/_hamburger.scss
+++ b/english-for-kids/assets/styles/components/_hamburger.scss
@@ -35,5 +35,13 @@
 }
 
 .hamburger__checkbox:checked ~ span{
-    margin-top: 2px;
+    transform: rotate(45deg) translate(9px, 9px);
+}
+
+.hamburger__checkbox:checked ~span:nth-last-child(3){
+    transform: rotate(-45deg);
+}
+
+.hamburger__checkbox:checked ~ span:nth-last-child(2){
+    display: none;
 }
