feat: add logic to start button game and finish logic with countin true or false answers

--- a/english-for-kids/assets/styles/main.scss
+++ b/english-for-kids/assets/styles/main.scss
@@ -31,6 +31,7 @@
   'components/card',
   'components/card-main',
   'components/switch',
+  'components/final-result',
   'components/hamburger';
 
 // 6. Page-specific styles
