--- a/english-for-kids/assets/styles/components/_rating.scss
+++ b/english-for-kids/assets/styles/components/_rating.scss
@@ -1,8 +1,9 @@
 .rating{
     width: 420px;
-    height: 50px;
+    height: 45px;
     grid-column: 3/5;
     margin-top: 30px;
+    overflow: hidden;
 }
 
 .star{
