--- a/english-for-kids/assets/styles/style.css
+++ b/english-for-kids/assets/styles/style.css
@@ -278,10 +278,7 @@ body {
   transform: translate(-50%, -50%);
 }
 .final-section__title {
-  position: fixed;
-  top: 10%;
-  left: 40%;
-  transform: translate(-10%, -50%);
+  text-align: center;
   font-size: 5rem;
 }
 
