--- a/english-for-kids/assets/styles/components/_rating.scss
+++ b/english-for-kids/assets/styles/components/_rating.scss
@@ -4,6 +4,15 @@
     grid-column: 3/5;
     margin-top: 30px;
     overflow: hidden;
+
+    @include media-900{
+        width:300px;
+    }
+
+    @include media-630{
+        width:250px;
+        grid-row: 2/3;
+    }
 }
 
 .star{
