--- a/english-for-kids/assets/styles/layout/_header.scss
+++ b/english-for-kids/assets/styles/layout/_header.scss
@@ -3,4 +3,8 @@
     justify-items: center;
     grid-template-columns: repeat(6, 1fr);
     width: 100%;
+
+    @include media-630{
+        grid-template-rows: repeat(2, 1fr);
+    }
 }
