--- a/english-for-kids/assets/styles/style.css
+++ b/english-for-kids/assets/styles/style.css
@@ -30,6 +30,11 @@ body {
   grid-template-columns: repeat(6, 1fr);
   width: 100%;
 }
+@media (min-width: 320px) and (max-width: 630px) {
+  .header {
+    grid-template-rows: repeat(2, 1fr);
+  }
+}
 
 .main {
   width: 100%;
@@ -125,6 +130,17 @@ body {
   grid-column: 3/5;
   margin-top: 30px;
   overflow: hidden;
+}
+@media (max-width: 900px) {
+  .rating {
+    width: 300px;
+  }
+}
+@media (min-width: 320px) and (max-width: 630px) {
+  .rating {
+    width: 250px;
+    grid-row: 2/3;
+  }
 }
 
 .star {
